# dbtogo

./: README.md  example.py  pyproject.toml  readme.md
.github/workflows/: ci.yml
autodb/: serialization.py
pwdantic/: exceptions.py  interfaces.py  migrations.py  pwdantic.py  serialization.py  sqlite.py
src/dbtogo/: datatypes.py  dbmodel.py  exceptions.py  migrations.py  serialization.py  sqlite.py
tests/: basic.py  test_basic.py  test_crud.py  test_edges.py  test_identity.py  test_migrations.py
