[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "dbtogo"
version = "0.0.2"
authors = [
  { name="Filip Hejzlar", email="hejzlar.filip@seznam.cz" },
]
description = "Python ORM on top of Pydantic models with focus on simplicity"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Graph3x/dbtogo"
Issues = "https://github.com/Graph3x/dbtogo/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
strict = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
line-length = 79
target-version = "py312"
select = ["E", "F", "W", "I", "UP"]
ignore = []
